--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"graphql": "^16.8.0",
+		"graphql-request": "^6.1.0"
+	}
 }
